# ConanPlayground

./: .gitignore  README.md
apps/consumer/: CMakeLists.txt  conanfile.py
apps/consumer/src/: main.cpp
conan-config/: remotes.json
conan-config/profiles/: common
docs/: artifactory.md
scripts/: build_all_packages.cmd  build_all_packages.sh  build_consumer.cmd  build_consumer.sh  create_named_profiles.sh  init_profiles.sh  install_conan_config.cmd  install_conan_config.sh  load_env.cmd  lock_consumer.cmd  lock_consumer.sh  remote_add_artifactory.cmd  remote_add_artifactory.sh  remote_add_cache.cmd  remote_add_git.cmd  remote_add_nexus.cmd  upload_internal.cmd  upload_internal.sh
tools/artifactory/: docker-compose.yml
tools/conan_server/: server.conf
